  with the selector behavior in WebKit and Firefox, and makes more css
  expressions valid location paths (for use in xsl:template match).

* In lxml.html, non-selected ``<option>`` tags no longer show up in the
  collected form values.

* Adding/removing ``<option>`` values to/from a multiple select form
  field properly selects them and unselects them.

Other changes
--------------


2.3 (2011-02-06)
================

Features added
--------------

* When looking for children, ``lxml.objectify`` takes '{}tag' as
  meaning an empty namespace, as opposed to the parent namespace.

Bugs fixed
----------

* When finished reading from a file-like object, the parser
  immediately calls its ``.close()`` method.

* When finished parsing, ``iterparse()`` immediately closes the input
  file.

* Work-around for libxml2 bug that can leave the HTML parser in a
  non-functional state after parsing a severly broken document (fixed
  in libxml2 2.7.8).

* ``marque`` tag in HTML cleanup code is correctly named ``marquee``.

Other changes
--------------

* Some public functions in the Cython-level C-API have more explicit
  return types.


2.3beta1 (2010-09-06)
=====================

Features added
--------------

Bugs fixed
----------

* Crash in newer libxml2 versions when moving elements between
  documents that had attributes on replaced XInclude nodes.

* ``XMLID()`` function was missing the optional ``parser`` and
  ``base_url`` parameters.

* Searching for wildcard tags in ``iterparse()`` was broken in Py3.

* ``lxml.html.open_in_browser()`` didn't work in Python 3 due to the
  use of os.tempnam.  It now takes an optional 'encoding' parameter.

Other changes
--------------


2.3alpha2 (2010-07-24)
======================

Features added
--------------

Bugs fixed
----------

* Crash in XSLT when generating text-only result documents with a
  stylesheet created in a different thread.

Other changes
--------------
